client/src/stylesheets/main.scss
@import "./utilities/_mixins.scss";
@import "./utilities/_variables.scss";
@import "./utilities/color-palette.scss";
// @import "styles.scss";

// Montserrat
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");

// Exo
@import url("https://fonts.googleapis.com/css2?family=Exo:wght@400;500;600;700&display=swap");

// Ruda
@import url("https://fonts.googleapis.com/css2?family=Ruda:wght@400;500;600;700&display=swap");

// Khula
@import url("https://fonts.googleapis.com/css2?family=Khula:wght@400;600;700&display=swap");

// ----- HTML ELEMENTS -----

html {
  height: 100%;
  width: 100%;

  @include xl {
    font-size: 12px !important;
  }

  @include lg {
    font-size: 8px !important;
  }

  @include md {
    font-size: 6px !important;
  }
  @include sm {
    font-size: 4px !important;
  }
}

header,
footer {
  display: block;
}

footer {
  position: relative;
}

h1,
h2,
h3,
h4 {
  font-family: $montserrat !important;
}

h1 {
  letter-spacing: 0.25rem;
  font-size: 3rem;
  font-weight: 600;
  color: var(--white);
  text-transform: uppercase;
}

h2 {
  font-weight: 600;
  text-transform: uppercase;
  color: var(--white);
  font-size: 2em;
}

h3 {
  font-size: 2rem;
  font-weight: 500;
  color: var(--white);
  font-style: normal;
}

ol,
ul {
  list-style: none;
}

p,
li {
  font-family: $ruda !important;
  line-height: 1.5em;
}

h4 {
  text-transform: uppercase;
  font-weight: bold;
}

body {
  height: 100% !important;
  width: 100% !important;
  overflow-x: hidden;
  font-family: $khula !important;
  font-weight: $regular !important;
  background-color: black;

  // fade animation for body
  animation: fadeInAnimation ease 3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;

  // CSS VARIABLES

  // color theme
  --light-accent: rgb(202, 166, 110);
  --dark-accent: #a49ca6; // accent - modal borders, hover,
  --dark-shade: rgb(34, 26, 27);
  --dark-shade-9: rgba(34, 26, 27, 0.9);
  --dark-shade-75: rgba(34, 26, 27, 0.75);
  --light-shade: rgb(241, 224, 197);
  --light-shade-05: rgba(241, 224, 197, 0.05);
  --light-shade-25: rgba(241, 224, 197, 0.25);
  --main-brand: rgb(156, 81, 71);
  --main-brand-5: rgba(156, 81, 71, 0.5);

  // player colors
  --color-Researcher: rgba(67, 124, 174, 0.2);
  --color-Pioneer: rgba(111, 36, 134, 0.2);
  --color-Curator: rgba(103, 65, 29, 0.2);
  --color-Entrepreneur: rgba(199, 168, 40, 0.2);
  --color-Politician: rgba(170, 42, 41, 0.2);
  --color-Upkeep: rgba(45, 143, 68, 0.2);
  --color-Upkeep-opaque-2: rgba(45, 143, 68, 0.25);
  --green: rgba(95, 141, 75, 1);
  --marslog-red: rgba(170, 42, 41, 0.2);
  --marslog-purple: rgba(111, 36, 134, 0.2);
  --marslog-orange: rgba(170, 111, 0, 0.2);
  --marslog-green: rgba(9, 92, 41, 0.2);
  --trade-request-blue: #659be8;

  --brown: #754c29;
  --beige: #d9cfc6;
  --red: #aa2a29;
  --black: #000000;
  --white: #ffffff;
  --yellow: #ebce56;
  --blue: #005dac;
  --purple: #7f3f98;
}

p,
h1,
img,
button {
  user-select: none !important;
}

// ----- CUSTOM ANIMATION -----

// fade in animation
@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.backdrop {
  background-color: $light-shade-05;
}

.light-shade-05-border {
  border: 0.05rem solid var(--light-shade-05);
}

.header {
  background-color: $main-brand;
  color: $dark-shade;
}

.light-shade-25-partition {
  border-right: 0.2rem solid $light-shade-25;
}

.scrollable {
  position: absolute;
  overflow-y: auto;
  overflow-x: hidden;
}

.bg-dark-75 {
  background-color: $dark-shade-75;
}

